--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,15 @@
 {
   "manifest_version": 2,
   "name": "AKS Proper Sort",
-  "version": "1.0",
+  "version": "1.0.1",
   "description": "A simple extension that properly sorts your AKS wishlist by price",
   "permissions": ["activeTab"],
+  "browser_specific_settings": {
+	  "gecko": {
+		"id": "aks_proper_sort@karatzasd.com",
+		"strict_min_version": "48.0"
+	  }
+  },
   "background": {
     "scripts": ["background.js"],
     "persistent": false
@@ -19,6 +25,5 @@
     "16": "logo_16x16.png",
     "48": "logo_48x48.png",
     "128": "logo_128x128.png"
-  },
-  "permissions": ["activeTab"]
+  }
 }
